# tap-noaa-gfs

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  PROMPT.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_noaa_gfs/: __init__.py  __main__.py  client.py  grib_parser.py  helpers.py  streams.py  tap.py
tests/: __init__.py  test_core.py  test_smoke.py
