[build-system]
requires = [
    "hatchling>=1,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "tap-noaa-gfs"
version = "0.0.1"
description = "Singer tap for NOAA GFS weather forecast model data (GRIB2), built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Matt Elgazar", email = "melgazar9@gmail.com" }]
keywords = [
    "ELT",
    "NOAA",
    "GFS",
    "weather",
    "forecast",
    "GRIB2",
    "Singer",
    "Meltano",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "singer-sdk~=0.53.5",
    "typing-extensions>=4.5.0; python_version < '3.13'",
    "requests~=2.32.3",
    "backoff>=2.2.1,<3.0.0",
    "cfgrib>=0.9.10",
    "xarray>=2024.1.0",
    "eccodes>=1.6.0",
    "numpy>=1.26.0",
]

[project.scripts]
tap-noaa-gfs = "tap_noaa_gfs.tap:TapNoaaGfs.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=9",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.19.1",
    "ty>=0.0.18",
    "types-requests",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.pytest]
addopts = [
    "--durations=10",
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
]
log_level = "INFO"
minversion = "9.0"
testpaths = [
    "tests",
]
xfail_strict = true

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.ruff]
line-length = 100
required-version = ">=0.15"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is fine in tests
    "PLR2004", # magic values are fine in tests
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
min_version = "4.43"
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "typing",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    "GITHUB_*",
    "TAP_NOAA_GFS_*",
]
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

[tool.tox.env.typing]
dependency_groups = ["test", "typing"]
commands = [
    ["mypy", { replace = "posargs", default = ["tap_noaa_gfs", "tests"], extend = true }],
    ["ty", "check", { replace = "posargs", default = ["tap_noaa_gfs", "tests"], extend = true }],
]
